--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  functions = "netlify/functions"
+  functions = "netlify/functions"  # Lokasi tempat fungsi serverless Anda berada
+  publish = "public"               # Folder yang berisi file frontend (index.html, css, js)
 
 [[redirects]]
   from = "/ask"
